--- a/style2.css
+++ b/style2.css
@@ -1,9 +1,6 @@
 body {
-    background: linear-gradient(to right, #ce8e18, #b9b728); /* Gradiente che va da arancio a giallo  */
+    background: linear-gradient(to right, #cb8b37, #b67c19); /* Gradiente che va da arancio a giallo  */
 }
- 
-
-
 
 
 
