--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body{font-family:  'Inter', sans-serif;font-size: 16px;}
 
 a{text-decoration: none;}
 
-h1,h2,h3,h4,h5, p{color: #000; padding-bottom: 30px;}
+h1,h2,h3,h4,h5, p{color: #000000; padding-bottom: 30px;}
 
-p{line-height: 20px;color: #666; font-weight: 300;}
+p{line-height: 20px;color: #020202; font-weight: 300;}
 
 .big-text{font-size: 70px; font-weight: 900;}
 .med-text{font-size: 40px;}
@@ -13,7 +13,7 @@ p{line-height: 20px;color: #666; font-weight: 300;}
 .small-text{font-size: 14px;}
 
 .intro-text{text-transform: uppercase;font-size: 20px;font-weight: bold;}
-. button{padding: 18px 28px; background: #316bff; color:#FFF; display: inline-block; 
+. button{padding: 18px 28px; background: #000000; color:#ffffff; display: inline-block; 
 border-radius: 7px;}
 
 
@@ -23,25 +23,40 @@ border-radius: 7px;}
     width: 100px;
     position: fixed;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%);
     padding: 30px;
     display: flex;
     max-width: 1350px;
 }
 
+.logo{
+    z-index: 1;
+}
+
+.menu{
+    width: 100px;
+    z-index: 0;
+}
+
+.menu{display: inline-block;}
+.menu li a{background: #eee4ef,#a53f3f ;padding: 15px;display: block;}
+
+
+/* ! hero */
+
+
+  .hero__content{
+    width: 100%;
+    max-width: 1350px;
+    margin: 0 auto;
+   padding: 30px;
+ position: relative;
+   }
 
 
 
 
-
-
-
-
-
-
-
-
+.hero__content h1,
+.hero__content{color: #FFF;}
 
 
 
